'String' 타입을 근본적으로 바꿔버려서...다시 만들자

--- a/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
@@ -2,16 +2,21 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net8.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-
     <!-- Type-directed conversion by an op_Implicit conversion at non-method-argument. -->
     <NoWarn>$(NoWarn);FS3391</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Primitives.fs" />
     <Compile Include="Prelude.fs" />
-    <Compile Include="Unit.fs" /><Compile Include="Bool.fs" />
+    <Compile Include="Unit.fs" />
+    <Compile Include="Bool.fs" />
     <Compile Include="Char.fs" />
-    <Compile Include="Sys.fs" /><Compile Include="Int.fs" /><Compile Include="List.fs" />
-    <Compile Include="String.fs" /><Compile Include="Obj.fs" /><Compile Include="Float.fs" />
+    <Compile Include="Sys.fs" />
+    <Compile Include="Int.fs" />
+    <Compile Include="List.fs" />
+    <Compile Include="String.fs" />
+    <Compile Include="Obj.fs" />
+    <Compile Include="Float.fs" />
     <Compile Include="Stdlib.fs" />
   </ItemGroup>
   <ItemGroup>
