--- a/src/Nemonuri.OCamlDotNet/Stdlib/Nemonuri.OCamlDotNet.Stdlib.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Stdlib/Nemonuri.OCamlDotNet.Stdlib.fsproj
@@ -1,10 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net8.0;;net10.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net8.0;net10.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <!-- Type-directed conversion by an op_Implicit conversion at non-method-argument. -->
+    <NoWarn>$(NoWarn);FS3391</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Primitives.fs" />
+    <Compile Include="Primitives.Operations.fs" />
+    <Compile Include="Primitives.Bytes.fs" />
+    <Compile Include="Primitives.String.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Nemonuri.ByteChars\Nemonuri.ByteChars.csproj" />
