좋아. 'fixed'를 이용해, span 타입을 타입 매개변수로 전달 가능하게 바꾸자.

--- a/src/Nemonuri.OCamlDotNet/Stdlib/Nemonuri.OCamlDotNet.Stdlib.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Stdlib/Nemonuri.OCamlDotNet.Stdlib.fsproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>netstandard2.0;netstandard2.1;net8.0;net10.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <!-- Type-directed conversion by an op_Implicit conversion at non-method-argument. -->
-    <NoWarn>$(NoWarn);FS3391</NoWarn>
+    <NoWarn>$(NoWarn);FS0009;FS3391</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Primitives.fs" />
