--- a/src/Nemonuri.OCamlDotNet/Stdlib/Nemonuri.OCamlDotNet.Stdlib.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Stdlib/Nemonuri.OCamlDotNet.Stdlib.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Primitives.fs" />
+    <Compile Include="Primitives.Exceptions.fs" />
     <Compile Include="Primitives.Operations.fs" />
     <Compile Include="Primitives.Bytes.fs" />
     <Compile Include="Primitives.String.fs" />
