--- a/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
+++ b/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
@@ -8,6 +8,7 @@
     <PackageReference Include="TypeEquality" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Primitives.Experimental.fs" />
     <Compile Include="Primitives.fs" />
     <Compile Include="Pervasive.fs" />
     <Compile Include="TypeListAliases.fs" />
