--- a/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
+++ b/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
@@ -9,9 +9,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Functionals.fs" />
-    <Compile Include="Abstractions.fs" />
-    <Compile Include="Prelude.fs" />
-    <Compile Include="Pervasive.fs" />
+    <Compile Include="Primitives.Abstractions.fs" />
+    <Compile Include="Primitives.fs" /><Compile Include="Primitives.Operations.fs" />
+    
     <Compile Include="Prims.fs" />
   </ItemGroup>
 </Project>
