--- a/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
+++ b/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
@@ -6,18 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>14</LangVersion>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="PolySharp" PrivateAssets="all" />
-    <PackageReference Include="CommunityToolkit.Diagnostics" />
-    <PackageReference Include="FSharp.Core" />
   </ItemGroup>
   
   <PropertyGroup>
     <PolySharpIncludeGeneratedTypes>
       <!-- https://github.com/Sergio0694/PolySharp/tree/main/src/PolySharp.SourceGenerators/EmbeddedResources -->
-      System.Diagnostics.CodeAnalysis.NotNullWhenAttribute;
+      System.Runtime.CompilerServices.IsExternalInit;
     </PolySharpIncludeGeneratedTypes>
   </PropertyGroup>
 
